# Prune-And-Train

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: alexnet.py  cli.py  dataset_loader.py  main.py  prune.py  train.py
